# ising-model-study

./: .gitignore  CMakeLists.txt  Makefile  README.md  setup.sh
include/: ising_lattice.hpp  random.hpp
src/: ising_lattice.cpp  main.cpp  random.cpp
